Navbar and breadcrumbs

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,10 @@
 .style{
     width:76%;
 }
+body{
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+.navbar-dark{
+    background-color: #512DA8;
+}
